@@ -1,0 +1,4 @@
+template <typename Type>
+inline ValueIterator<Type>::
+{
+}
