@@ -1,3 +1,7 @@
+
+  * Added the class template ValueIterator
+
+
 bobcat (3.20.01)
 
   * Added the LinearMap(initializer_list<value_type>) constructor to the
